[package]
name = "miden-assembly-syntax"
version.workspace = true
description = "Parsing and semantic analysis of the Miden Assembly language"
documentation = "https://docs.rs/miden-assembly-syntax"
readme = "README.md"
categories = ["compilers", "no-std"]
keywords = ["assembly", "language", "syntax", "miden"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[features]
default = ["std"]
std = [
    "aho-corasick/std",
    "miden-core/std",
    "miden-debug-types/std",
    "miden-utils-diagnostics/std",
    "thiserror/std",
    "proptest/std",
]
serde = [
    "dep:serde",
    "miden-core/serde",
    "miden-debug-types/serde",
    "semver/serde",
    "smallvec/serde",
]
arbitrary = ["dep:proptest", "dep:proptest-derive", "miden-core/arbitrary"]
testing = ["arbitrary", "logging"]
logging = ["dep:env_logger"]

[dependencies]
# Miden dependencies
miden-core.workspace = true
miden-debug-types.workspace = true
miden-utils-diagnostics.workspace = true
midenc-hir-type = { workspace = true, features = ["serde"] }

# External dependencies
aho-corasick = { workspace = true }
env_logger = { workspace = true, optional = true }
lalrpop-util = { workspace = true }
log.workspace = true
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
regex = { workspace = true, features = ["unicode", "perf"] }
semver = { workspace = true }
serde = { workspace = true, optional = true }
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
env_logger.workspace = true
miden-test-serde-macros.workspace = true
proptest.workspace = true
pretty_assertions = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
lalrpop = { workspace = true }
rustc_version = { workspace = true }
