[package]
authors.workspace      = true
categories.workspace   = true
description            = "Procedural macros for miden-crypto"
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
name                   = "miden-crypto-derive"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.29.0"

[lib]
doctest    = false
proc-macro = true
test       = false

[dependencies]
quote = { workspace = true }
syn   = { version = "2.0", features = ["full"] }

[dev-dependencies]
miden-field = { workspace = true }

[lints]
workspace = true
