[package]
name = "miden-debug-types"
version.workspace = true
description = "Core source-level debugging information types used throughout the Miden toolchain"
documentation = "https://docs.rs/miden-debug-types"
readme = "README.md"
categories = ["compilers", "no-std"]
keywords = ["debugging", "debuginfo", "span"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[features]
default = ["std"]
std = [
    "memchr/std",
    "miden-formatting/std",
    "miden-utils-sync/std",
    "proptest/std",
    "serde/std",
    "serde_spanned?/std",
    "thiserror/std",
]
arbitrary = ["std", "dep:proptest"]
serde = ["dep:serde", "dep:serde_spanned", "serde_spanned?/serde"]

[dependencies]
# Miden dependencies
miden-crypto.workspace = true
miden-formatting.workspace = true
miden-utils-sync.workspace = true
miden-utils-indexing.workspace = true

# External dependencies
memchr = { version = "2.7", default-features = false }
miette = { workspace = true, features = ["fancy-no-syscall", "derive"] }
paste.workspace = true
proptest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_spanned = { version = "1.0", optional = true, default-features = false }
thiserror.workspace = true

[dev-dependencies]
miden-test-serde-macros.workspace = true
proptest.workspace = true
serde_json.workspace = true
